<resources>
    <string name="app_name">Challenge #1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="animals">Animals</string>
    <string name="select_animal">Select the animal:</string>
    <string-array name="animal_names">
        <item>Frog</item>
        <item>Rhino</item>
        <item>Snail</item>
    </string-array>
    <string name="choose">Choose an animal</string>
    <string name="owner">Owner:</string>
    <string name="name">Pet Name:</string>
    <string name="age">Age:</string>
    <string name="btnmusic">Play music</string>
    <string name="btnedit">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>